--- a/src/main/resources/templates/accountadmin/index.html
+++ b/src/main/resources/templates/accountadmin/index.html
@@ -3,7 +3,170 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>アカウント管理</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <aside class="sidebar">
+        <div class="sidebar-header">
+          <i class="fas fa-bars"></i>
+        </div>
+        <div class="sidebar-menu">
+          <div class="menu-item active">
+            <i class="fas fa-user-circle"></i>
+          </div>
+          <div class="menu-item">
+            <i class="fas fa-chart-bar"></i>
+          </div>
+        </div>
+
+        <div class="sidebar-chats">
+          <p class="chat-section-title">▶︎ ダイレクトメッセージ</p>
+          <ul class="chat-list dm-list">
+            <li class="chat-item"><span class="avatar bg-a">A</span> OOO</li>
+            <li class="chat-item"><span class="avatar bg-p">P</span> OOO</li>
+            <li class="chat-item"><span class="avatar bg-c">C</span> OOO</li>
+            <li class="chat-item"><span class="avatar bg-d">D</span> OOO</li>
+            <li class="chat-item"><span class="avatar bg-e">€</span> OOO</li>
+            <li class="chat-item"><span class="avatar bg-f">F</span> OOO</li>
+            <li class="chat-item"><span class="avatar bg-a">A</span> OOO</li>
+          </ul>
+
+          <p class="chat-section-title">▼ グループ</p>
+          <ul class="chat-list group-list">
+            <li class="chat-item"><span class="avatar bg-g">G</span> OOO</li>
+            <li class="chat-item"><span class="avatar bg-h">H</span> OOO</li>
+            <li class="chat-item"><span class="avatar bg-x">X</span> OOO</li>
+            <li class="chat-item"><span class="avatar bg-y">Y</span> OOO</li>
+          </ul>
+        </div>
+      </aside>
+
+      <main class="main-content">
+        <header class="main-header">
+          <h1>アカウント管理</h1>
+          <div class="header-controls">
+            <button class="filter-btn"><i class="fas fa-filter"></i> フィルター</button>
+            <button class="add-user-btn"><i class="fas fa-user-plus"></i></button>
+          </div>
+        </header>
+
+        <div class="account-list-container">
+          <ul class="account-list">
+            <li class="account-item header-row">
+              <span class="col-avatar"></span>
+              <span class="col-name">name</span>
+              <span class="col-role">role</span>
+              <span class="col-grade">学年</span>
+              <span class="col-class">クラス</span>
+              <span class="col-number">番号</span>
+              <span class="col-actions"></span>
+            </li>
+
+            <li class="account-item">
+              <span class="col-avatar"><span class="avatar-sm bg-a">A</span></span>
+              <span class="col-name">name</span>
+              <span class="col-role">role</span>
+              <span class="col-grade">学年</span>
+              <span class="col-class">クラス</span>
+              <span class="col-number">番号</span>
+              <span class="col-actions">
+                <i class="fas fa-pencil-alt edit-icon"></i>
+                <i class="fas fa-trash-alt delete-icon"></i>
+              </span>
+            </li>
+            <li class="account-item">
+              <span class="col-avatar"><span class="avatar-sm bg-a">A</span></span>
+              <span class="col-name">name</span>
+              <span class="col-role">role</span>
+              <span class="col-grade">学年</span>
+              <span class="col-class">クラス</span>
+              <span class="col-number">番号</span>
+              <span class="col-actions">
+                <i class="fas fa-pencil-alt edit-icon"></i>
+                <i class="fas fa-trash-alt delete-icon"></i>
+              </span>
+            </li>
+            <li class="account-item">
+              <span class="col-avatar"><span class="avatar-sm bg-a">A</span></span>
+              <span class="col-name">name</span>
+              <span class="col-role">role</span>
+              <span class="col-grade">学年</span>
+              <span class="col-class">クラス</span>
+              <span class="col-number">番号</span>
+              <span class="col-actions">
+                <i class="fas fa-pencil-alt edit-icon"></i>
+                <i class="fas fa-trash-alt delete-icon"></i>
+              </span>
+            </li>
+            <li class="account-item">
+              <span class="col-avatar"><span class="avatar-sm bg-a">A</span></span>
+              <span class="col-name">name</span>
+              <span class="col-role">role</span>
+              <span class="col-grade">学年</span>
+              <span class="col-class">クラス</span>
+              <span class="col-number">番号</span>
+              <span class="col-actions">
+                <i class="fas fa-pencil-alt edit-icon"></i>
+                <i class="fas fa-trash-alt delete-icon"></i>
+              </span>
+            </li>
+            <li class="account-item">
+              <span class="col-avatar"><span class="avatar-sm bg-a">A</span></span>
+              <span class="col-name">name</span>
+              <span class="col-role">role</span>
+              <span class="col-grade">学年</span>
+              <span class="col-class">クラス</span>
+              <span class="col-number">番号</span>
+              <span class="col-actions">
+                <i class="fas fa-pencil-alt edit-icon"></i>
+                <i class="fas fa-trash-alt delete-icon"></i>
+              </span>
+            </li>
+            <li class="account-item">
+              <span class="col-avatar"><span class="avatar-sm bg-a">A</span></span>
+              <span class="col-name">name</span>
+              <span class="col-role">role</span>
+              <span class="col-grade">学年</span>
+              <span class="col-class">クラス</span>
+              <span class="col-number">番号</span>
+              <span class="col-actions">
+                <i class="fas fa-pencil-alt edit-icon"></i>
+                <i class="fas fa-trash-alt delete-icon"></i>
+              </span>
+            </li>
+            <li class="account-item">
+              <span class="col-avatar"><span class="avatar-sm bg-a">A</span></span>
+              <span class="col-name">name</span>
+              <span class="col-role">role</span>
+              <span class="col-grade">学年</span>
+              <span class="col-class">クラス</span>
+              <span class="col-number">番号</span>
+              <span class="col-actions">
+                <i class="fas fa-pencil-alt edit-icon"></i>
+                <i class="fas fa-trash-alt delete-icon"></i>
+              </span>
+            </li>
+            <li class="account-item">
+              <span class="col-avatar"><span class="avatar-sm bg-a">A</span></span>
+              <span class="col-name">name</span>
+              <span class="col-role">role</span>
+              <span class="col-grade">学年</span>
+              <span class="col-class">クラス</span>
+              <span class="col-number">番号</span>
+              <span class="col-actions">
+                <i class="fas fa-pencil-alt edit-icon"></i>
+                <i class="fas fa-trash-alt delete-icon"></i>
+              </span>
+            </li>
+          </ul>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
