--- a/src/main/resources/templates/groupcreate/index.html
+++ b/src/main/resources/templates/groupcreate/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>グループ作成</title>
-    <link rel="stylesheet" th:href="@{/groupcreate.css}" />
+    <link rel="stylesheet" href="/css/groupcreate.css" />
   </head>
 
   <body>
