--- a/src/main/resources/templates/groupinfo/index.html
+++ b/src/main/resources/templates/groupinfo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>グループ詳細</title>
-    <link rel="stylesheet" th:href="@{/groupinfo.css}" />
+    <link rel="stylesheet" href="/css/groupinfo.css" />
   </head>
   <body>
     <div class="sidebar">
