--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ホーム</title>
 
-    <link rel="icon" th:href="@{/images/favicon.ico}" />
+    <link rel="icon" th:href="@{/images/logo.png}" />
 
     <!-- Bootstrap -->
     <link
@@ -14,7 +14,7 @@
     />
 
     <!-- ✅ カスタムCSS -->
-    <link rel="stylesheet" th:href="@{/top.css}" />
+    <link rel="stylesheet" href="/css/top.css" />
   </head>
 
   <body>
@@ -25,8 +25,10 @@
           <button class="menu-btn" id="menu-toggle">☰</button>
         </div>
 
-        <!-- ✅ グループ作成アイコン -->
-        <a th:href="@{/templates/index.html}" class="create-group-icon">＋</a>
+        <!-- ✅ グループ作成アイコン（画像版） -->
+        <a th:href="@{/groupcreate}" class="create-group-icon">
+          <img th:src="@{/images/group_icon.png}" alt="group" class="group-icon-img" />
+        </a>
 
         <p class="menu-title">▼ ダイレクトメッセージ</p>
         <ul class="menu-list">
