管理者メニュー、サイドバー統一

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,6 +85,7 @@
             </div>
           </li>
         </ul>
+        <a href="login">ログイン画面へ</a><br />
         <a href="accountadmin">アカウント管理画面へ</a><br />
         <a href="accountcreate">アカウント作成画面へ</a><br />
         <a href="admin">管理者メニューへ</a><br />
